--- a/style2.css
+++ b/style2.css
@@ -50,7 +50,6 @@ hr{
 }
 
 /* second half css start */
-
 .secondhalfsubtitle{
     padding-bottom: 0px;
     display: grid; 
@@ -74,7 +73,6 @@ hr{
 }
 
 
-
 .links{
     font-size: 12px;
     padding:0px;
@@ -85,9 +83,30 @@ hr{
     text-align: right;
     font-size: 12px;
 }
+/* links grid end */
+
 
 .footer {
     text-align: right;
     font-size: 12px;
     padding-top: 30px;
+}
+
+/* media query for small screen */
+@media screen and (max-width: 723px) {
+    .wrapper{
+        width:100%;
+        display: flex;
+        flex-direction: column;
+    }
+    .title, .number, .subtitle, .chart,.secondhalfsubtitle, .secondhalf-wrapper, .footer{
+        flex:100%;
+        align-items: center;
+        margin:0px 5px;}
+
+    .chart{
+        text-align: center;
+        padding-left:5px;
+    }   
+    
 }
