--- a/style2.css
+++ b/style2.css
@@ -10,6 +10,8 @@ hr{
     height: 0.1px;
     background: #dae7fc;
     color: #dae7fc;
+   
+   
 }
 
 .wrapper {
@@ -19,7 +21,7 @@ hr{
     flex-direction: column;
 }
 
-.title, .number, .subtitle, .chart,.secondhalfsubtitle, .secondhalf-wrapper, .footer {
+.title, .number, .subtitle, .chart,.secondhalfsubtitle, .secondhalf-wrapper, .feethr, .feet{
     background-color: #468df1;
     color: #dae7fc;
     font-family: 'Noto Sans JP', sans-serif;
@@ -76,21 +78,24 @@ hr{
 .links{
     font-size: 12px;
     padding:0px;
-    margin:0px;
 }
 
 .links-number{
     text-align: right;
     font-size: 12px;
-}
+}    
 /* links grid end */
 
-
-.footer {
+.feet {
     text-align: right;
-    font-size: 12px;
-    padding-top: 30px;
+    font-size: 12px; 
+    padding-top: 20px;
+    margin-top:1px;
 }
+
+
+
+
 
 /* media query for small screen */
 @media screen and (max-width: 723px) {
@@ -99,7 +104,7 @@ hr{
         display: flex;
         flex-direction: column;
     }
-    .title, .number, .subtitle, .chart,.secondhalfsubtitle, .secondhalf-wrapper, .footer{
+    .title, .number, .subtitle, .chart,.secondhalfsubtitle, .secondhalf-wrapper, .feet{
         flex:100%;
         align-items: center;
         margin:0px 5px;}
