--- a/style2.css
+++ b/style2.css
@@ -10,12 +10,9 @@ hr{
     height: 0.1px;
     background: #dae7fc;
     color: #dae7fc;
-   
-   
 }
 
 .wrapper {
-    
     width: 25%;
     display: flex;
     flex-direction: column;
@@ -26,7 +23,6 @@ hr{
     color: #dae7fc;
     font-family: 'Noto Sans JP', sans-serif;
     padding: 10px 25px;
-
 }
 
 .title{ 
@@ -46,10 +42,13 @@ hr{
     color:#b6d1f9;
 }
 
-.chart{
-    padding: 3px 25px;
-    text-align: center;
+img{
+    width:100%;
+    object-fit: contain;
 }
+
+
+
 
 /* second half css start */
 .secondhalfsubtitle{
