interface 3 first commit

--- a/style3.css
+++ b/style3.css
@@ -38,7 +38,7 @@ body{
 .picture{
   height:calc(265px - 6px);  
   grid-row: span 2;
-  background-image: url(banana.jpg);
+  background-image: url(img/banana.jpg);
   background-size: cover;
 }
 
